home_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: hello-docker
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000 
  type: NodePort
